...

    <string name="testing">Testing</string>
    <string name="align_color_card">Align the color card within the view above</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="close">Close</string>
    <string name="camera">Camera</string>
    <string name="delete">Delete</string>
    <string name="delete_selected_result">Delete selected result?</string>
    <string name="deleted">Deleted</string>

    <!-- Software notices -->
...
    <string name="version_has_expired">This version of the app has expired.</string>
    <string name="uninstall_install_from_store">Please uninstall and then install the latest version from Play Store.</string>

    <string name="result_list">List of results</string>
    <string name="no_data">No test results yet</string>
    <string name="tap_to_start">Tap the <b>+</b> button below to\nlaunch a new test.</string>
    <string name="start_test">Start test</string>
    <string name="compost_test">Compost Test</string>
    <string name="soil_test">Soil Test</string>
    <string name="card_test">Simple Card Test</string>
    <string name="colorimetric_test">Colorimetric Test</string>
    <string name="titration_test">Titration Test</string>
    <string name="external_meter">External Meter</string>
...
    <string name="invalid_image">Invalid image</string>
    <string name="result">Result</string>
    <string name="analyzed_photo">Analyzed Photo</string>
    <string name="color_extracts">Colors detected</string>
    <string name="confirm_color_extract">If the color detection above is incorrect, redo the capture with better light conditions.</string>
    <string name="result_image">Result image</string>
    <string name="start">Start</string>
    <string name="instructions">Instructions</string>
    <string name="place_card_and_cuvette">Place the card and cuvette with the water sample on the provided stand.</string>
    <string name="when_ready_camera">When ready, point the phone camera at it.</string>
    <string name="click_launch_camera">Click <b>Start</b> below to launch the camera preview.</string>
    <string name="camera_start_align_card">When the camera starts, align the card in the viewer as shown in the example above.</string>
    <string name="continue_on">Continue</string>
    <string name="redo">Redo</string>
    <string name="navigate_up">Navigate up</string>
    <string name="analyzing_photo">Analyzing photo…</string>
    <string name="brightness">Brightness</string>
    <string name="closer">Closer</string>
    <string name="too_close">Too close</string>
    <string name="confirm_calibration">Confirm Calibration</string>
...
    <string name="fluoride_high_range" tools:keep="@string/fluoride_high_range">Fluoride - High Range</string>
    <string name="iron" tools:keep="@string/iron">Iron</string>
    <string name="nitrate" tools:keep="@string/nitrate">Nitrate</string>
    <string name="nitrite" tools:keep="@string/nitrite">Nitrite</string>
    <string name="nitrogen" tools:keep="@string/nitrogen">Nitrogen</string>
    <string name="organic_carbon" tools:keep="@string/organic_carbon">Organic Carbon</string>
    <string name="ph" tools:keep="@string/ph">pH</string>
    <string name="phosphate" tools:keep="@string/phosphate">Phosphate</string>
    <string name="phosphorous" tools:keep="@string/phosphorous">Phosphorous</string>
    <string name="potassium" tools:keep="@string/potassium">Potassium</string>
    <string name="residual_chlorine" tools:keep="@string/residual_chlorine">Residual Chlorine</string>
    <string name="invalid_card_test" tools:keep="@string/invalid_card_test">Invalid Card Test</string>
    <string name="unknown" tools:keep="@string/unknown">Unknown</string>
    <string name="error_test_not_available">Requested test is not available</string>
    <string name="please_contact_support">Please contact technical support</string>
    <string name="cannot_start_test">Cannot start test</string>
    <string name="error">Error</string>
    <string name="required">Required</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="calibrate">Calibrate</string>
    <string name="select_test">Select Test</string>
    <string name="calibrate_summary">Calibrate using a standard</string>
    <string name="calibrated_successfully">%s calibrated successfully</string>
    <string name="tilt_backwards">Tilt phone backwards</string>
    <string name="tilt_forwards">Tilt phone forwards</string>
...
        <item>Lake water</item>
        <item>Rain water</item>
        <item>River water</item>
        <item>Sewage</item>
    </string-array>

    <string name="start_timer">Start Timer</string>
    <string name="skip_time_delay">Skip delay</string>

    <!-- RiskType-->
    <string name="low_safety">Safe</string>
    <string name="medium_safety">Safe</string>
    <string name="high_safety">Unsafe</string>

...
    <string name="calibration_already_saved">Calibration already saved as: %s</string>
    <string name="start_camera">Start camera</string>
    <string name="analyze">Analyze</string>
    <string name="analyze_sample">Analyze Sample</string>

    <string name="total_hardness">Total Hardness</string>
    <string name="total_alkalinity">Total Alkalinity</string>
    <string name="p_alkalinity">P-Alkalinity</string>
    <string name="t_alkalinity">T-Alkalinity</string>
    <string name="error_calibration_incomplete">Calibration for %1$s is incomplete</string>
    <string name="do_you_want_to_calibrate">Complete the calibration and try again</string>
    <string name="clear_calibration">Clear calibration</string>
    <string name="invalid_calibration">Invalid Calibration</string>
    <string name="calibration_not_available">External sensor mode</string>
    <string name="color_card_mode">Color card mode</string>
...
    <string name="calibrate_with_new_reagent">Recalibrate with fresh reagent</string>
    <string name="not_found">Not found</string>
    <string name="recent">Recent</string>
    <string name="all">All</string>
    <string name="select_date">Select date</string>
    <string name="all_values_in_kg_ha">(All values in kg/ha)</string>
    <string name="redo_test">Redo</string>
    <string name="done">Done</string>
    <string name="c_empty">Empty contents of the cuvette and rinse it</string>
    <string name="external_app_not_installed">External app is not installed.</string>
    <string name="install_external_app">Please install the External app from your instance.</string>

    <string name="analytics_preferences">Usage data</string>
    <string name="analytics">Collect anonymous usage data</string>
    <string name="analytics_summary">Anonymous usage data helps the support team prioritize fixes and features</string>
    <string name="calcium_and_magnesium">Calcium and Magnesium</string>
    <string name="accept_result">Accept Result</string>
    <string name="other">Other</string>
    <string name="show_advanced_color_info">Show advanced color info</string>
    <string name="title_activity_about2">AboutActivity2</string>
</resources>

