...
        android:layout_height="match_parent"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/camera_lyt"
        app:layout_constraintTop_toTopOf="@id/camera_lyt">

        <io.ffem.lite.widget.StopWatchView
            android:id="@+id/countdown_tmr"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_gravity="center"
            app:circleColor="#016ec6" />
    </FrameLayout>

...
            android:padding="10dp"
            android:text="@string/skip_time_delay"
            android:textColor="#CACACA"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/start_timer_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="visible" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/start_timer_btn"
...
