...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_extra_small"
            android:text="@string/card_test" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/colorimetric_button"
            style="@style/Widget.Collect.Button.FullWidth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_extra_small"
            android:text="@string/colorimetric_test" />

...
