...
    <!--            android:title="Test Image Number"-->
    <!--            app:allowDividerAbove="true"-->
    <!--            app:allowDividerBelow="true"-->
    <!--            app:iconSpaceReserved="false" />-->

    <!--        <EditTextPreference-->
    <!--            android:defaultValue="100"-->
    <!--            android:dialogMessage="The minimum brightness (0 - 255)"-->
    <!--            android:inputType="number"-->
    <!--            android:key="@string/minimum_brightness"-->
    <!--            android:maxLength="3"-->
    <!--            android:selectAllOnFocus="true"-->
    <!--            android:title="Minimum brightness"-->
...
            android:selectAllOnFocus="true"
            android:title="Max swatch color distance"
            app:allowDividerAbove="true"
            app:iconSpaceReserved="false" />

        <EditTextPreference
            android:defaultValue="20"
            android:dialogMessage="Enter a value below 400"
            android:inputType="number"
            android:key="@string/colorAverageDistanceToleranceKey"
            android:maxLength="3"
            android:selectAllOnFocus="true"
            android:title="Max averaging color distance"
...
